[B]Version 4.2.10[/B]
Correct media type for items (pull#61 thanks to phil65)
Keep default context menu items (issue#62)

[B]Version 4.2.9[/B]
Fix topics (issue#60)
Removed vestiges of Vimeo support

[B]Version 4.2.8[/B]
Fix search and topics actions (issue#57)

[B]Version 4.2.7[/B]
Add 'Toggle watched' action (pull#55 thanks to trideceth12)

[B]Version 4.2.6[/B]
Fix topics (issue#54)

[B]Version 4.2.5[/B]
Added topics browsing (pull#52 thanks to Tibo-lg)
Removed themes category which has been replaced by topics (issue#53)

[B]Version 4.2.4[/B]
Fix issue attempting to show subtitles when there aren't any (issue#50 issue#51)

[B]Version 4.2.3[/B]
Fix workaround for newest talks with Python <2.7 (issue#41)

[B]Version 4.2.2[/B]
Fix issue that stopped plugin loading (issue#47)

[B]Version 4.2.1[/B]
Fix speakers (issue#45)
Fix newest talks for Python <2.7 (issue#41)

[B]Version 4.2.0[/B]
Updates to support new TED site (issue#45)
Added support for talk search (issue#12)
Fix issue when trying to guess ISO code for language (issue#39)
Fix setting video duration (issue#41)
Performance improvements for Themes browser (issue#33)
Grouped speakers list by pages instead of by letter (issue#46)

[B]Version 4.1.9[/B]
Fix playing talks where the title text has no colon (issue#38)

[B]Version 4.1.8[/B]
Allow video quality to be set (issue#37)
Playback of Vimeo-hosted talks (issue#24)
Fix playback of Youtube-hosted talks
Performance improvements for Newest Talks and video startup (issue#33)

[B]Version 4.1.7[/B]
Fix subtitles (issue#35) thanks to omega32
Major version bump for XBMC Frodo

[B]Version 3.1.6[/B]
Fix getting subtitles using default xbmc language (issue#30)

[B]Version 3.1.5[/B]
Fix subtitles (issue#29)
Fix for listItem API change in XBMC on Raspberry Pi builds and/or Frodo (issue#28)

[B]Version 3.1.4[/B]
Respect order of custom language codes when fetching subtitles (issue#26)
Allow subtitles to be disabled (issue#27)

[B]Version 3.1.3[/B]
Fix subtitles (issue#25)
