@@ -1,0 +1,7 @@
+language: python
+python:
+  - "2.7"
+install: pip install -r requirements.txt
+before_script:
+  - export PYTHONPATH=$PYTHONPATH:$TRAVIS_BUILD_DIR/testSupport
+script: nosetests
