@@ -6,8 +6,12 @@ so keep it for now.
 
 import urllib2
 import time
+import xbmc
 
 from datetime import timedelta
+
+from ted_talks_const import ADDON, DATE, VERSION
+
 try:
     from elementtree.ElementTree import fromstring
 except ImportError:
@@ -39,6 +43,10 @@ class NewTalksRss:
         title = item.find('./{http://www.itunes.com/dtds/podcast-1.0.dtd}subtitle').text  # <title> tag has unecessary padding strings
         author = item.find('./{http://www.itunes.com/dtds/podcast-1.0.dtd}author').text
         pic = item.find('./{http://search.yahoo.com/mrss/}thumbnail').get('url')
+
+        xbmc.log("[ADDON] %s v%s (%s) debug mode, %s = %s" % (ADDON, VERSION, DATE, "pic", str(pic)),
+            xbmc.LOGDEBUG)
+
         duration = item.find('./{http://www.itunes.com/dtds/podcast-1.0.dtd}duration').text
         duration = time.strptime(duration, '%H:%M:%S')
         duration_seconds = self.__total_seconds__(timedelta(hours=duration.tm_hour, minutes=duration.tm_min, seconds=duration.tm_sec))
