@@ -6,9 +6,9 @@ http://estebanordano.com.ar/wp-content/uploads/2010/01/TEDTalkSubtitles.py_.zip
 '''
 import json
 import urllib
-import re
-# Custom xbmc thing for fast parsing. Can't rely on lxml being available as of 2012-03.
-import CommonFunctions as xbmc_common
+import xbmc
+
+from ted_talks_const import ADDON, DATE, VERSION
 
 __friendly_message__ = 'Error showing subtitles'
 __talkIdKey__ = 'id'
@@ -33,7 +33,7 @@ def __get_languages__(talk_json):
     '''
     Get languages for a talk, or empty array if we fail.
     '''
-    return [l['languageCode'] for l in talk_json['languages']]
+    return [l['languageCode'] for l in talk_json['player_talks'][0]['languages']]
 
 def get_subtitles(talk_id, language, logger):
     url = 'http://www.ted.com/talks/subtitles/id/%s/lang/%s' % (talk_id, language)
@@ -48,10 +48,19 @@ def get_subtitles_for_talk(talk_json, accepted_languages, logger):
     Return subtitles in srt format, or notify the user and return None if there was a problem.
     '''
     talk_id = talk_json['id']
-    intro_duration = talk_json['introDuration']
+    intro_duration = talk_json['player_talks'][0]['introDuration']
+
+    xbmc.log(
+        "[ADDON] %s v%s (%s) debug mode, %s = %s" % (ADDON, VERSION, DATE, "intro_duration", str(intro_duration)),
+        xbmc.LOGDEBUG)
 
     try:
         languages = __get_languages__(talk_json)
+
+        xbmc.log("[ADDON] %s v%s (%s) debug mode, %s = %s" % (ADDON, VERSION, DATE, "languages", str(languages)),
+            xbmc.LOGDEBUG)
+        xbmc.log("[ADDON] %s v%s (%s) debug mode, %s = %s" % (ADDON, VERSION, DATE, "accepted_languages", str(accepted_languages)),
+            xbmc.LOGDEBUG)
 
         if len(languages) == 0:
             msg = 'No subtitles found'
