@@ -1,0 +1,9 @@
+#!/usr/bin/env python
+# -*- coding: UTF-8 -*-
+
+#
+# Constants
+# 
+ADDON = "plugin.video.ted.talks"
+DATE = "2017-05-25"
+VERSION = "4.2.10"
